Implemennt table operations btn.

--- a/SchoolDiary/schooldiary.client/src/index.css
+++ b/SchoolDiary/schooldiary.client/src/index.css
@@ -19,7 +19,17 @@ button.btn-primary {
 div.bg-primary {
     background-color: #3b71ca !important;
 }
+nav.bg-dark {
+    background-color: #1B1E24 !important;
+}
 /*Common*/
+.icon-btn {
+    border: none;
+    background: transparent;
+}
+    .icon-btn:active {
+        color: #282C34 !important;
+    }
 .sidebar {
     height: 100%;
     width: 200px;
@@ -110,6 +120,10 @@ div.bg-primary {
         display: inline;
         vertical-align: bottom;
     }
+.active {
+    color: #1B1E24;
+    background-color: #61D4E7;
+}
 .menu-item {
     width: 200px;
 }
@@ -118,12 +132,23 @@ div.bg-primary {
     border-top: 1px solid #bbb;
 }
 .collapsed {
-    margin-left: 250px;
+    margin-left: 200px;
     transition: .5s;
 }
 .stretched {
-    margin-left: 100px;
+    margin-left: 50px;
     transition: .5s;
+}
+.search-form {
+    display: flex;
+    align-items: center;
+    float: right;
+}
+.search-input {
+    margin-right: 10px;
+}
+.search-btn {
+    margin-right: 10px;
 }
 /*Login page*/
 .login-container {
